[gd_scene load_steps=27 format=3 uid="uid://bxrvb1ninxb77"]

[ext_resource type="Script" uid="uid://deep1rb4hx2ta" path="res://scripts/pause.gd" id="1_f1d2v"]
[ext_resource type="PackedScene" uid="uid://jw0dy6pjaowh" path="res://scenes/default_transition_fade_in.tscn" id="2_30wyh"]
[ext_resource type="Texture2D" uid="uid://btsjovj5s4men" path="res://assets/images/jamela_INTRO_0.png" id="2_gcmcy"]
[ext_resource type="Texture2D" uid="uid://b2hxpjpouyak5" path="res://assets/images/jamela_INTRO2_0.png" id="2_r1fnm"]
[ext_resource type="Texture2D" uid="uid://c1aehdrutq4uw" path="res://assets/images/jamela_INTRO_1.png" id="3_jl8xs"]
[ext_resource type="Texture2D" uid="uid://csfbxnoe2067u" path="res://assets/images/jamela_INTRO2_1.png" id="3_wen6a"]
[ext_resource type="Texture2D" uid="uid://ctjarnnrj1n16" path="res://assets/images/jamela_INTRO2_2.png" id="4_cml1b"]
[ext_resource type="Texture2D" uid="uid://dsykjpix8lbd1" path="res://assets/images/jamela_INTRO_2.png" id="4_qn06s"]
[ext_resource type="Texture2D" uid="uid://cfinke8s28vd5" path="res://assets/images/jamela_INTRO2_3.png" id="5_1xtef"]
[ext_resource type="Texture2D" uid="uid://nu0cjwrh4wba" path="res://assets/images/jamela_INTRO_3.png" id="5_vrtv1"]
[ext_resource type="Texture2D" uid="uid://wutdw7bkjm8t" path="res://assets/images/jamela_INTRO_4.png" id="6_30wyh"]
[ext_resource type="Texture2D" uid="uid://dbogs45cpgntk" path="res://assets/images/jamela_INTRO2_4.png" id="6_xmhi0"]
[ext_resource type="Texture2D" uid="uid://632ur7rslx7o" path="res://assets/images/jamela_INTRO_5.png" id="7_gcd8f"]
[ext_resource type="Texture2D" uid="uid://doybiikbaveqq" path="res://assets/images/jamela_INTRO_6.png" id="8_t3fa8"]
[ext_resource type="Texture2D" uid="uid://dorecop7xqjw5" path="res://assets/images/jamela_INTRO_7.png" id="9_nbku2"]
[ext_resource type="Texture2D" uid="uid://bslksmbwghx3e" path="res://assets/novas_imagens/menu/gui-for-cyberpunk-pixel-art/9 Other/3 Skill icons/Skillicon7_02.png" id="15_qn06s"]
[ext_resource type="Texture2D" uid="uid://obhft0l6l255" path="res://assets/novas_imagens/menu/gui-for-cyberpunk-pixel-art/9 Other/3 Skill icons/Skillicon7_18.png" id="16_30wyh"]
[ext_resource type="Texture2D" uid="uid://6q57wdaxgctf" path="res://assets/novas_imagens/menu/gui-for-cyberpunk-pixel-art/9 Other/3 Skill icons/Skillicon7_13.png" id="16_vrtv1"]

[sub_resource type="Animation" id="Animation_30wyh"]
resource_name = "intro"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maycon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 1.4666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-124, 308), Vector2(350, 308)]
}

[sub_resource type="Animation" id="Animation_gcd8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maycon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-124, 308)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3fa8"]
_data = {
&"RESET": SubResource("Animation_gcd8f"),
&"intro": SubResource("Animation_30wyh")
}

[sub_resource type="LabelSettings" id="LabelSettings_gcd8f"]
font_size = 44

[sub_resource type="LabelSettings" id="LabelSettings_30wyh"]
font_size = 26

[sub_resource type="SpriteFrames" id="SpriteFrames_xw83q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gcmcy")
}, {
"duration": 1.0,
"texture": ExtResource("3_jl8xs")
}, {
"duration": 1.0,
"texture": ExtResource("4_qn06s")
}, {
"duration": 1.0,
"texture": ExtResource("5_vrtv1")
}, {
"duration": 1.0,
"texture": ExtResource("6_30wyh")
}, {
"duration": 1.0,
"texture": ExtResource("7_gcd8f")
}, {
"duration": 1.0,
"texture": ExtResource("8_t3fa8")
}, {
"duration": 1.0,
"texture": ExtResource("9_nbku2")
}, {
"duration": 1.0,
"texture": ExtResource("2_r1fnm")
}, {
"duration": 1.0,
"texture": ExtResource("3_wen6a")
}, {
"duration": 1.0,
"texture": ExtResource("4_cml1b")
}, {
"duration": 1.0,
"texture": ExtResource("5_1xtef")
}, {
"duration": 1.0,
"texture": ExtResource("6_xmhi0")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SystemFont" id="SystemFont_t3fa8"]
font_italic = true

[sub_resource type="LabelSettings" id="LabelSettings_nbku2"]
font = SubResource("SystemFont_t3fa8")
font_size = 41

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 648.0
offset_top = 957.0
offset_right = 648.0
offset_bottom = 957.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1d2v")

[node name="pause_animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../black_screen")
libraries = {
&"": SubResource("AnimationLibrary_t3fa8")
}
autoplay = "intro"

[node name="black_screen" type="ColorRect" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 0
offset_left = -1.0
offset_top = -3.0
offset_right = 1149.0
offset_bottom = 657.0
color = Color(0, 0, 0, 1)

[node name="fade" parent="black_screen" instance=ExtResource("2_30wyh")]
position = Vector2(1, 3)

[node name="pause" type="Label" parent="black_screen"]
layout_mode = 0
offset_left = 498.0
offset_right = 639.0
offset_bottom = 129.0
text = "PAUSE
"
label_settings = SubResource("LabelSettings_gcd8f")

[node name="space_keys" type="Label" parent="black_screen"]
layout_mode = 0
offset_left = 916.0
offset_top = 431.0
offset_right = 988.0
offset_bottom = 467.0
text = "space"
label_settings = SubResource("LabelSettings_30wyh")

[node name="power_keys_q" type="Label" parent="black_screen"]
layout_mode = 0
offset_left = 929.0
offset_top = 191.0
offset_right = 974.0
offset_bottom = 227.0
text = "Q"
label_settings = SubResource("LabelSettings_30wyh")

[node name="power_keys_w" type="Label" parent="black_screen"]
layout_mode = 0
offset_left = 929.0
offset_top = 252.0
offset_right = 974.0
offset_bottom = 288.0
text = "w"
label_settings = SubResource("LabelSettings_30wyh")

[node name="maycon" type="AnimatedSprite2D" parent="black_screen"]
position = Vector2(-124, 308)
scale = Vector2(3.1786866, 2.9598992)
sprite_frames = SubResource("SpriteFrames_xw83q")
animation = &"idle"
frame = 12
frame_progress = 1.0

[node name="jump" type="Sprite2D" parent="black_screen"]
position = Vector2(726.5, 452.50003)
scale = Vector2(2.71875, 2.1562498)
texture = ExtResource("15_qn06s")

[node name="defence" type="Sprite2D" parent="black_screen"]
position = Vector2(646.5, 455)
scale = Vector2(2.5937507, 2.4999998)
texture = ExtResource("16_30wyh")

[node name="power" type="Sprite2D" parent="black_screen"]
position = Vector2(686.00006, 242.00002)
scale = Vector2(3.953125, 3.796875)
texture = ExtResource("16_vrtv1")

[node name="powers" type="Label" parent="black_screen"]
layout_mode = 0
offset_left = 757.00006
offset_top = 183.99997
offset_right = 903.00006
offset_bottom = 480.99997
text = "PUNCH
KICK


   JUMP"
label_settings = SubResource("LabelSettings_nbku2")

[node name="camera" type="Camera2D" parent="black_screen"]
position = Vector2(1, 3)
offset = Vector2(580, 330)
